Redux - Add, edit, save note done

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    margin: 0;
+    overflow: hidden;
+}
+
+i:hover {
+    color: #222 !important;
+    opacity: 0.9 !important;
+
+}
