--- a/src/app/main/components/note/note.component.html
+++ b/src/app/main/components/note/note.component.html
@@ -1,6 +1,6 @@
 <div class="note-area">
 
-  <div class="timestamp">September 15, 2017 at 3:20 pm</div>
+  <div class="timestamp">{{now | date:'MMM d, y, h:mm a'}}</div>
   <textarea [(ngModel)]="note.title" (keyup)="addNote()"></textarea>
 
 </div>
