--- a/src/app/main/components/sidebar/sidebar.component.html
+++ b/src/app/main/components/sidebar/sidebar.component.html
@@ -2,7 +2,9 @@
   <!-- <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">×</a> -->
 
   <a *ngFor="let note of notes" (click)="selectNote(note)" [class.active]="note.isSelected">
-    <span class="title" title="{{truncateTitle(note.title)}}"> {{truncateTitle(note.title)}}</span>
+    <span class="title" title="{{truncateTitle(note.title)}}"
+    [innerHTML]="truncateTitle(note.title)"
+    > </span>
     <div class="create-time">
       <span> {{getTime(note.createdDate)}}</span>
       <span>{{note.text}}</span>
