Mobile responsive styles added

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -1,7 +1,8 @@
 nav {
     background-color: lightgrey !important;
     opacity: 0.9;
-    .collapse {
+    height: 62px;
+    // .collapse {
         .nav-item {
             .nav-link {
                 .icon  {
@@ -11,6 +12,7 @@ nav {
                     border-radius: 6px;
                     background-color: #f1f1f1;
                     padding: 3px;
+                    cursor: pointer;
                     i.fa {
                         font-size: 18px;
                         vertical-align: middle;
@@ -24,11 +26,11 @@ nav {
             .input-group {
                 i.fa-search {
                     position: absolute;
-                    z-index: 100;
                     left: 5px;
-                    top: 12px;
+                    top: 13px;
+                    z-index: 100;
                     font-size: 13px;
-                    color: darkgrey;
+                    color: grey;
                 }
                 input.form-control {
                     color: #9b9b9b;
@@ -42,7 +44,7 @@ nav {
                     }
                 }
             }
-        }
+        // }
     }
 }
 .dot {
@@ -53,5 +55,18 @@ nav {
     &:nth-child(2) {
         margin: 0 7px;
     }
+}
+
+@media only screen and (max-width: 769px) {
+    .navbar {
+        padding: .5rem 0.3rem;
+        ul.navbar-nav {
+            flex-direction: row;
+            .nav-item:nth-child(2) .nav-link {
+                margin-left: 6px;
+            }
+        }
+    }
+
 }
 
