--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "./fonts.less";
+
 body {
     margin: 0;
     overflow: hidden;
+    font-family: cpTitilliumRegular !important;
 }
 
 i:hover {
