--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
   <a class="navbar-brand" href="#">
     <span class="dot bg-danger"></span>
     <span class="dot bg-warning"></span>
     <span class="dot bg-success"></span>
   </a>
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="javascript:void(0)">
-          <span (click)="deleteNote()" title="Delete note" class="icon trash-icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)">
-          <span (click)="saveNote()" title="Save note" class="icon edit-icon">
-            <i class="fa fa-edit" aria-hidden="true"></i></span>
-        </a>
-      </li>
-    </ul>
+  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <li class="nav-item active">
+      <a class="nav-link" href="javascript:void(0)">
+        <span (click)="deleteNote()" title="Delete note" class="icon trash-icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="javascript:void(0)">
+        <span (click)="saveNote()" title="Save note" class="icon edit-icon">
+          <i class="fa fa-edit" aria-hidden="true"></i></span>
+      </a>
+    </li>
+  </ul>
+  <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo03"> -->
+    <div class="">
     <form class="form-inline my-2 my-lg-0">
       <div class="input-group">
         <i class="fa fa-search"></i>
