--- a/src/app/main/components/note/note.component.less
+++ b/src/app/main/components/note/note.component.less
@@ -1,21 +1,30 @@
 .note-area {
     margin-left: 350px;
     padding: 6px 12px;
-    border-left: 2px solid #EDEDEC;
+   // border-left: 2px solid #EDEDEC;
+
     .timestamp {
         text-align: center;
         padding: 12px;
-        font-weight: 600;
+        font-weight: 767;
         font-size: 15px;
         color: #BBBBBA;
     }
+
     textarea {
         height: 100vh;
         width: 100%;
         border: none;
         color: #6A6A68;
+
         &:focus {
             outline: none;
         }
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .note-area {
+        margin-left: 200px;
     }
 }
