Search note issue fix

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,8 @@
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     <li class="nav-item active">
       <a class="nav-link" href="javascript:void(0)">
-        <span (click)="deleteNote()" title="Delete note" class="icon trash-icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+        <span (click)="deleteNote()" title="Delete note" class="icon trash-icon"><i class="fa fa-trash-o"
+            aria-hidden="true"></i></span>
       </a>
     </li>
     <li class="nav-item">
@@ -22,13 +23,16 @@
     </li>
   </ul>
   <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo03"> -->
-    <div class="">
-    <form class="form-inline my-2 my-lg-0">
+  <div class="">
+    <form class="search-form my-2 my-lg-0">
+
       <div class="input-group">
-        <i class="fa fa-search"></i>
-        <input (keyup)="searchNote()" [(ngModel)]="searchQuery" name="InputSearch" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input (keyup)="searchNote()" [(ngModel)]="searchQuery" name="InputSearch" class="form-control mr-sm-2"
+          type="text" placeholder="Search">
+        <span class="cross-icon" (click)="clearQuery()" *ngIf="searchQuery.trim()">x</span>
       </div>
-     
+
     </form>
   </div>
 </nav>
