Mobile device- header search box css fix

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
     </li>
   </ul>
   <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo03"> -->
-  <div class="">
+  <div class="search-field">
     <form class="search-form my-2 my-lg-0">
 
       <div class="input-group">
