--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -85,10 +85,17 @@ nav {
 
         ul.navbar-nav {
             flex-direction: row;
+            width: 80px;
 
+            .nav-item .icon {
+                width: 26px;
+            }
             .nav-item:nth-child(2) .nav-link {
                 margin-left: 6px;
             }
+        }
+        .search-field {
+            width: 140px;
         }
     }
 
