ngrx intergation finished

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,12 +11,12 @@
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     <li class="nav-item active">
       <a class="nav-link" href="javascript:void(0)">
-        <span (click)="deleteNote()" title="Delete note" class="icon trash-icon"><i class="fa fa-trash-o"
+        <span (click)="removeNote()" title="Remove note" class="icon trash-icon"><i class="fa fa-trash-o"
             aria-hidden="true"></i></span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="javascript:void(0)">
+      <a class="nav-link" href="javascript:void(0)" [class.disabled]="!enteredNote">
         <span (click)="saveNote()" title="Save note" class="icon edit-icon">
           <i class="fa fa-edit" aria-hidden="true"></i></span>
       </a>
