--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -1,5 +1,5 @@
 nav {
-    background-color: lightgrey !important;
+    background-color: #EDEAEC !important;
     opacity: 0.9;
     height: 62px;
 
@@ -11,7 +11,7 @@ nav {
                 display: inline-block;
                 text-align: center;
                 border-radius: 6px;
-                background-color: #f1f1f1;
+                background-color: #FAFAFB;
                 padding: 3px;
                 cursor: pointer;
 
