--- a/src/app/main/components/sidebar/sidebar.component.html
+++ b/src/app/main/components/sidebar/sidebar.component.html
@@ -5,14 +5,11 @@
   <a href="javascript:void(0)" class="closebtn" (click)="closeSidebar()">×</a>
 
   <a *ngFor="let note of notes" (click)="selectNote(note)" [class.active]="note.isSelected">
-    <span class="title" title="{{truncateTitle(note.title)}}"
-    [innerHTML]="truncateTitle(note.title)"
-    > </span>
+    <span class="title" title="{{truncateTitle(note.text)}}" [innerHTML]="truncateTitle(note.text)"> </span>
     <div class="create-time">
       <span> {{note.createdDate | dateFormatter:'hh:mm'}}</span>
       <span>{{note.text}}</span>
     </div>
   </a>
-  <div class="no-notes" *ngIf="notes.length==0">No notes found</div>
 
 </div>
