--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -11,5 +11,10 @@ body {
 i:hover {
     color: #222 !important;
     opacity: 0.9 !important;
+}
 
+.disabled {
+    i {
+        color: #BFBFBC !important;
+    }
 }
