--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <notes-header></notes-header>
 
-<section>
+<main>
   <notes-main></notes-main>
-</section>
-
-<notes-footer></notes-footer>
+</main>
