--- a/src/app/main/components/note/note.component.html
+++ b/src/app/main/components/note/note.component.html
@@ -1,6 +1,6 @@
-<div class="note-area" id="NoteArea">
+<div class="note-wrapper" id="NoteArea">
 
   <div class="timestamp">{{now | date:'MMM d, y, h:mm a'}}</div>
-  <textarea #inputNote [(ngModel)]="enteredNote" (input)="addNote()"></textarea>
+  <textarea placeholder="Start typing here..." #inputNote [(ngModel)]="enteredNote" (input)="addNote()"></textarea>
 
 </div>
